  execution when an assertion fails
- deseas() function: add the option of saving the X-13ARIMA
  specification created by gretl; add option to specify the
  ARIMA model; document the verbose option
- qrdecomp() function: support column pivoting, via new
  optional third argument
- weekday() and isoweek() functions: generalize to accept
  dates in ISO 8601 "basic" format
- Support direct assignment from string-values series to
  array of strings
- script editor: enhancements for Find/Replace dialog
- GUI viewer windows: support Ctrl-plus and Ctrl-minus to
  increase/reduce font size
- R support: enable exchange of matrices in binary format
- Fix bug: failure of dbnomics download on Windows when
  a very large number of series is specified
- Fix bug: crash on use of the --full option with "restrict"
  when applied to the alpha terms in a vecm
- Fix bug: breakage in GUI item "X-13ARIMA analysis"
- Fix bug: crash on trying to stringify() an empty series
- Fix bug: det() should not flag an error when returning NA
- Fix bug: make "set loop_maxiter 0" behave as advertised
- Fix bug: misbehavior when subsampling within a function a
  panel dataset that was subsampled prior to calling the
  function in question
- Fix bug: the 'end' keyword for indexing into matrices
  could fail under certain conditions
- Fix obscure issue: ensure that libR gets a correct value
  for R_HOME when the user has specified the location of
  libR.so as a symlink (probably specific to Linux, and
  confined to the context of gretl's "foreign language=R")
- Fix GUI bug: the option of showing lagged series in a
  selection dialog not always available when it should be
- Fix GUI bug: incorrect behavior of function-call dialog
  when defining a new list
- distribution: remove unused file, addons.txt

2022-02-02 version 2022a
- Copy/Paste of data in the GUI: make this facility more
  visible, and support gdt format in addition to delimited
  text; support Ctrl-C to copy